--- a/client/src/Styles/Landing.scss
+++ b/client/src/Styles/Landing.scss
@@ -18,7 +18,7 @@ $display-1: flex;
                 font-size: 2.5rem;
             }
 
-            @media screen and (max-width: 7368px) {
+            @media screen and (max-width: 768px) {
                 font-size: 2rem;
             }
         }
@@ -31,7 +31,7 @@ $display-1: flex;
                 font-size: 1.6rem;
             }
 
-            @media screen and (max-width: 7368px) {
+            @media screen and (max-width: 768px) {
                 font-size: 1.1rem;
             }
         }
@@ -40,8 +40,8 @@ $display-1: flex;
             letter-spacing: 2px;
             margin-bottom: 30px;
 
-            @media screen and (max-width: 7368px) {
-                letter-spacing: normal;
+            @media screen and (max-width: 768px) {
+                letter-spacing: 1px;
             }
         }
 
@@ -66,7 +66,7 @@ $display-1: flex;
             width: 100%;
             display: flex;
             justify-content: center;
-            padding: 20px 0;
+            padding: 15px 0;
         }
 
     }
