--- a/client/src/Styles/Designs.scss
+++ b/client/src/Styles/Designs.scss
@@ -1,9 +1,18 @@
 .top-section {
     padding: 20px 40px;
-    margin-top: 100px;
     box-shadow: 2px 4px 4px rgb(224, 224, 224);
     display: flex;
     justify-content: space-between;
+}
+
+.top-section-wrapper {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 60px;
+    margin-top: 30px;
+    background-color: #fff;
+    z-index: 1;
+    transition: all .4s;
 }
 
 .main-content {
