removed button outline

--- a/client/src/Styles/Item.scss
+++ b/client/src/Styles/Item.scss
@@ -50,6 +50,7 @@ $text-light: rgb(221, 234, 255);
                 padding: 10px;
                 border-radius: 5px;
                 box-shadow: 2px 4px 3px $text-light;
+                outline: none;
             }
         }
     }
