--- a/client/src/Styles/Item.scss
+++ b/client/src/Styles/Item.scss
@@ -3,55 +3,19 @@ $color-secondary: rgb(115, 105, 246);
 $text-light: rgb(221, 234, 255);
 
 .card {
-    width: 350px;
-    border: 1px solid rgb(216, 216, 216);
-    margin-bottom: 20px;
-    box-shadow: 2px 2px 6px rgb(231, 231, 231);
-    transition: all .5s;
+    transition: all .3s;
 
-    .card-image {
-        background-color: rgb(231, 231, 231);
-        width: 100%;
-        display: flex;
-        justify-content: center;
+    .card-item {
+        text-decoration: none;
 
-        img {
-            width: 90%;
-            margin: 40px 0;
+        .download-btn {
+            border: none;
+            background-color: $color-secondary;
+            color: $text-light;
+            padding: 10px;
             border-radius: 5px;
-        }
-    }
-
-    .card-content {
-        padding: 10px;
-
-        .card-title {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            img {
-                width: 30px;
-                height: 30px;
-                border: 1px solid $text-light;
-                border-radius: 50%;
-                padding: 5px;
-            }
-        }
-
-        .card-footer {
-            @extend .card-title;
-            color: grey;
-
-            .download-btn {
-                border: none;
-                background-color: $color-secondary;
-                color: $text-light;
-                padding: 10px;
-                border-radius: 5px;
-                box-shadow: 2px 4px 3px $text-light;
-                outline: none;
-            }
+            box-shadow: 2px 4px 3px $text-light;
+            outline: none;
         }
     }
 
@@ -60,5 +24,4 @@ $text-light: rgb(221, 234, 255);
         box-shadow: 4px 4px 6px rgb(231, 231, 231);
         cursor: pointer;
     }
-
 }
