--- a/client/src/Styles/Landing.scss
+++ b/client/src/Styles/Landing.scss
@@ -1,16 +1,6 @@
-$display-1: flex;
-
-.row {
-    height: 80vh;
-    display: $display-1;
-    justify-content: center;
-    align-items: center;
-
-    .col-1 {
-        width: 50%;
-        text-align: center;
-
-        .welcome {
+.landing {
+    &__info {
+        &-welcome {
             font-size: 3.2rem;
             font-weight: bold;
 
@@ -23,9 +13,9 @@ $display-1: flex;
             }
         }
 
-        .title {
-            font-size: 2rem;
-            letter-spacing: 1px;
+        &-title {
+            font-size: 1.5rem;
+            letter-spacing: 2.5px;
 
             @media screen and (max-width: 965px) {
                 font-size: 1.6rem;
@@ -36,59 +26,24 @@ $display-1: flex;
             }
         }
 
-        .info {
+        &-subtitle {
             letter-spacing: 2px;
-            margin-bottom: 30px;
+            color: rgb(223, 222, 222);
 
             @media screen and (max-width: 768px) {
                 letter-spacing: 1px;
             }
         }
 
-        button {
+        &-action {
             background-color: rgb(255, 255, 255);
             color: blueviolet;
             outline: none;
             border: none;
-            padding: 15px 30px;
+            padding: 10px 30px;
             border-radius: 50px;
             font-size: 18px;
-            transition: all 2s;
-
-            &:hover {
-                cursor: pointer;
-                box-shadow: 2px 2px 3px grey;
-                transform: translateY(-3%);
-            }
+            transition: all .5s;
         }
-
-        @media screen and (max-width: 645px) {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            padding: 15px 0;
-        }
-
-    }
-
-    .col-2 {
-        width: 50%;
-
-        img {
-            width: 80%;
-            // background: #eee;
-            border-radius: 30px;
-        }
-
-        @media screen and (max-width: 645px) {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            padding: 20px 0;
-        }
-    }
-
-    @media screen and (max-width: 645px) {
-        display: block;
     }
 }
