--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Muli', 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
